# practable-python

./: README.md  pyproject.toml  requirements.txt  source.cfg
examples/: spinner.py
scripts/: install-test.sh  setup-venv.sh
src/practable/: book.py  core.py  experiment.py  nohup.out
